2006-11-02
	* Release IPy 0.51
	* Write real name of IPy author (Maximillian Dornseif)
	* Use version "0.51" to help packaging since 0.5 was smaller than 0.42
	* Fix unit test on Python 2.3 (don't use doctest.testfile)

2006-10-26
	* Release IPy 0.5
	* Apply Jean Gillaux patch for netmask "/0.0.0.0" bug
	* Apply William McVey patch for __nonzero__() bug
	* Apply Victor Stinner patch: setup.py can use setuptools and fix URLs
	* Allow "172.30.1.0/22" with new option IPy.check_addr_prefixlen=False
	* Add regression tests
	* Create AUTHORS file

2004-08-22
	* IPy 0.42 works on Python 2.3 without warnings

2002-01-16
	* IPy 0.41 has Python < 2.2 compatible unit tests and a README file

2001-12-22
	* IPy 0.4 was the first public relase