@@ -3,6 +3,7 @@
 	* Write real name of IPy author (Maximillian Dornseif)
 	* Use version "0.51" to help packaging since 0.5 was smaller than 0.42
 	* Fix unit test on Python 2.3 (don't use doctest.testfile)
+	* "make test" also check IPy documentation
 
 2006-10-26
 	* Release IPy 0.5
